Basic initiation of the tool, created the tool, and populated the licenseeditor.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:extension.openPanel"
+    "onCommand:extension.openPanel",
+    "onStartupFinished",
+    "onDidChangeActiveTextEditor",
+    "onDidChangeTextEditorSelection",
+    "workspaceContains:**/*.lic",
+    "*"
   ],
   "main": "./out/extension.js",
   "contributes": {
